# Codex

./: .eslintrc.js  .gitignore  .gitmodules  Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: publish.yaml
apps/desktop/: package.json  tauri.conf.json  teste.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  style.scss
apps/desktop/src-tauri/: Cargo.toml  dev.db  tauri.conf.json
apps/desktop/src-tauri/index/: .managed.json  meta.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/Stores/: collectionStore.tsx  filterStore.tsx  modalStore.tsx  searchStore.tsx  sessionStore.tsx  themeStore.tsx  workspaceStore.tsx
apps/desktop/src/components/: index.tsx
apps/desktop/src/components/Authentication/: LoginForm.tsx  RegisterForm.tsx  useLoginForm.tsx
apps/desktop/src/components/CreateCollection/: CreateCollection.tsx  index.tsx
apps/desktop/src/components/DashboardWidget/: _dashboardWidget.scss
apps/desktop/src/components/Datagrid/: DataGridComponent.tsx  DatagridActions.tsx  DatagridPagination.tsx  FilterPanel.tsx  _datagrid.scss  constants.ts  getInlineEditColumns.tsx  sampleData.tsx  utilts.ts
apps/desktop/src/components/FilterFlyout/: _filterFlyout.scss  index.tsx
apps/desktop/src/components/ICA/: _ICA.scss  index.tsx
apps/desktop/src/components/Kanban/: index.tsx
apps/desktop/src/components/LocationTable/: index.tsx
apps/desktop/src/components/PDFViewer/: Viewer.tsx  index.tsx
apps/desktop/src/components/Player/: index.tsx
apps/desktop/src/components/Profile/: Profile.tsx  useProfile.tsx
apps/desktop/src/components/ProgressIndicator/: index.tsx
apps/desktop/src/components/SearchPanel/: SearchPanel.tsx  _SearchPanel.scss
apps/desktop/src/components/StarRating/: StarRating.tsx
apps/desktop/src/components/SuiteHeader/: _layout.scss  index.tsx
apps/desktop/src/components/TearSheet/: EditTearsheet.tsx  EditTearsheetForm.tsx  _EditTearsheetForm.scss  index.tsx
apps/desktop/src/components/Titlebar/: index.tsx
apps/desktop/src/constants/: KeyCodeConstants.tsx  defaultPageHeader.tsx  defaultPagination.tsx  plataformas.ts  settings.tsx
apps/desktop/src/context/: FilterContext.tsx
apps/desktop/src/hooks/: useClickOutside.tsx  useCollections.tsx  useCollectionsForm.tsx  useCreateLocationForm.tsx  useDocumentForm.tsx  useDocuments.tsx  useEditDocumentForm.tsx  useFilters.tsx  useLibraries.tsx  useLocations.tsx  useNotifications.tsx  usePreviousValue.tsx  useSideMenuItems.tsx  useTags.tsx
apps/desktop/src/lib/: carbonConfig.tsx  query.ts  supabaseClient.ts
apps/desktop/src/prisma/: seed.ts
apps/desktop/src/routes/: index.tsx
apps/desktop/src/utils/: Schemas.ts  componentsUtils.tsx  file.ts
apps/desktop/web/src/: bindings.ts
core/: Cargo.toml
core/.cargo/: config.toml
core/prisma/: dev.db  schema.prisma
core/prisma/migrations/20230807210331_/: migration.sql
core/prisma/migrations/20230903150310_/: migration.sql
core/prisma/migrations/20230904153332_/: migration.sql
core/prisma/migrations/20230905135414_/: migration.sql
core/prisma/migrations/20230912154205_/: migration.sql
core/src/: lib.rs  manager.rs  object.rs  watcher.rs
core/src/api/: collections.rs  library.rs  locations.rs  mod.rs  notifications.rs  objects.rs  projects.rs  search.rs  tags.rs  tasks.rs  workspaces.rs
core/src/api/utils/: invalidate.rs
core/src/config/: mod.rs
core/src/fs_utils/: fs_utils.rs  mod.rs
core/src/parsing/: mod.rs  pdf_parser.rs
core/src/search/: mod.rs  searcher.rs
core/src/thumbnail/: mod.rs  pdf_thumbnailer.rs
crates/discovery/: Cargo.toml
crates/prisma/: Cargo.toml
crates/prisma/src/: prisma.rs
crates/prisma_cli/: Cargo.toml
web/src/: bindings.ts
(+51 files in other folders)
