[workspace]
resolver = "2"
members = [
	"core",
	"crates/*",
	"apps/desktop/src-tauri",
]

[workspace.package]
license = "MIT"
edition = "2021"
repository = "https://github.com/saogregl/Codex"

[workspace.dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = [
	"rspc",
	"sqlite-create-many",
	"migrations",
	"sqlite",
    "postgresql"
], default-features = false }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = [
	"rspc",
	"sqlite-create-many",
	"migrations",
	"sqlite",
    "postgresql"
], default-features = false }
prisma-client-rust-sdk = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = [
	"sqlite","postgresql"
], default-features = false }

rspc = { version = "0.1.3" }
specta = { version = "1.0.4" }
tauri-specta = { version = "1.0.2" }


tokio = { version = "1.28.2" }

