[package]
name = "codex-core"
version = "0.0.0"
description = "The core that powers Codex."
authors = ["you"]
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
rspc = { workspace = true, features = ["tauri"] }
prisma-client-rust = { workspace = true }
specta = { workspace = true }
tokio = { workspace = true, features = [
	"sync",
	"rt-multi-thread",
	"io-util",
	"macros",
	"time",
	"process",
] }
serde = { version = "1.0.181", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
serde_json = "1.0.104"
codex-prisma = { path = "../crates/prisma" }
env_logger = "0.10.0"
futures = "0.3.28"
notify = "6.0.1"
thiserror = "1.0.44"
log = "0.4.19"
rayon = "1.7.0"
tantivy = "0.20.2"
tempfile = "3.7.0"
uuid = "1.4.1"
directories = "5.0.1"

