[package]
name = "codex"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "api-all"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0"
rspc = { workspace = true, features = ["tauri"] }
tokio = { workspace = true, features = ["sync"] }
percent-encoding = "2.2.0"
http = "0.2.9"
opener = { version = "0.6.1", features = ["reveal"] }
specta = { workspace = true }
tauri-specta = { workspace = true, features = ["typescript"] }
uuid = { version = "1.3.3", features = ["serde"] }
prisma-client-rust = { workspace = true }
dotenv = "0.15.0"
window-shadows = "0.2.1"
codex-prisma = { path = "../../../crates/prisma" }
codex-core = {path = "../../../core"}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
